--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -19,7 +19,7 @@
       <a class="navbar-brand fs-2" href="/">
         家庭記帳本
       </a>
-      <a href="#" class="btn btn-outline-primary">登出</a>
+      <a href="users/logout" class="btn btn-outline-primary">登出</a>
     </div>
   </nav>
   {{{body}}}
