--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,19 +1,18 @@
 <div class="container d-flex justify-content-center mt-5">
   <div class="card" style="width: 38rem;">
     <div class="card-body">
-      <h1 class="card-subtitle mb-2 text-muted">註冊新帳號</h1>
-      <form action="/users/register" method="post" class="d-flex flex-column mb-3">
+      <h1 class="card-subtitle mb-2 text-muted">登入帳號</h1>
+      <form action="/users/login" method="post" class="d-flex flex-column mb-3">
         <label for="email">輸入帳號（電郵位址）</label>
         <input type="email" class="mb-3" id="email" name="email" placeholder="輸入電郵位址">
         <label for="password">輸入密碼</label>
         <input type="password" class="mb-3" id="password" name="password" placeholder="輸入密碼">
-        <label for="confirm-password">確認密碼</label>
-        <input type="password" class="mb-3" id="confirm-password" name="confirm-password" placeholder="再次輸入密碼">
+
         <button class="btn btn-primary">確認送出</button>
       </form>
       <div class="row text-center">
-        <span>已經擁有帳號？</span>
-        <a href="/users/login" class="card-link">登入帳號</a>
+        <span>沒註冊過帳號？</span>
+        <a href="/users/register" class="card-link">註冊新帳號</a>
       </div>
     </div>
   </div>
