feat: add express-session

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -9,7 +9,7 @@
         <label for="password">輸入密碼</label>
         <input type="password" class="mb-3" id="password" name="password" placeholder="輸入密碼" value="{{password}}">
         <label for="confirm-password">確認密碼</label>
-        <input type="password" class="mb-3" id="confirm-password" name="confirm-password" placeholder="再次輸入密碼"
+        <input type="password" class="mb-3" id="confirm-password" name="confirmPassword" placeholder="再次輸入密碼"
           value="{{confirmPassword}}">
         <button class="btn btn-primary">確認送出</button>
       </form>
