--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,4 +1,4 @@
-<div class="container d-flex justify-content-center mt-5">
+<div class="container d-flex justify-content-center my-5">
   <div class="card" style="width: 38rem;">
     <div class="card-body">
       <h1 class="card-subtitle mb-2 text-muted">註冊新帳號</h1>
