--- a/views/index.hbs
+++ b/views/index.hbs
@@ -19,9 +19,11 @@
 </div>
 {{!-- 帳目 --}}
 
+
 <div class="container d-flex flex-column mt-4" style="max-width: 28vw;">
 
-  <div class="d-flex flex-column" style="min-width: 28vw;">
+
+  <!-- 
     <div class="d-flex flex-row justify-content-between">
       {{!-- 詳細資訊 --}}
       <div class="d-flex flex-row align-items-center" style="background-color: rgb(245, 231, 231);">
@@ -40,17 +42,21 @@
         <h5 class="mx-2">刪除</h5>
       </div>
     </div>
+ -->
 
+
+  <div class="d-flex flex-column" style="min-width: 28vw;">
+    {{#each expenses}}
     <div class="d-flex flex-row justify-content-between">
       {{!-- 詳細資訊 --}}
-      <div class="d-flex flex-row align-items-center">
+      <div class="d-flex flex-row align-items-center" style="background-color: rgb(245, 231, 231);">
         <i class="fa-solid fa-utensils"></i>
         <div class="d-flex flex-column">
-          <span>晚餐</span>
-          <span>2019/04/23</span>
+          <span>{{this.name}}</span>
+          <span>{{this.date}}</span>
         </div>
         <div>
-          <span style="margin-left: 60px;">60</span>
+          <span style="margin-left: 60px;">{{this.amount}}</span>
         </div>
       </div>
       {{!-- 修改或刪除 --}}
@@ -59,14 +65,16 @@
         <h5 class="mx-2">刪除</h5>
       </div>
     </div>
+    {{/each}}
   </div>
+
 
 </div>
 
 
 {{!-- 新增支出鈕 --}}
 <div class="row mt-5 justify-content-center">
-  <a href="" class="btn btn-primary" style="max-width: 180px;">新增支出</a>
+  <a href="/expense/new" class="btn btn-primary" style="max-width: 180px;">新增支出</a>
 </div>
 
 
