--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,7 +13,7 @@
     </div>
     <h5 class="mt-3">總金額：</h5>
     <div class="text-end">
-      <h1 style="color: rgb(255, 115, 0);">23530</h1>
+      <h1 style="color: rgb(255, 115, 0);">{{sum}}</h1>
     </div>
   </div>
 </div>
