--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -5,17 +5,19 @@
     <form action="/expense/new" method="post" class="d-flex flex-column mb-3">
       <div class="d-flex flex-row align-items-center mb-3">
         <div style="width: 110px; font-size: 10px"><span>* 必填欄位</span></div>
-        <div style="width: 150px;"><span>請輸入你的支出</span></div>
+        <div style="width: 150px;"><span>請修改你的支出</span></div>
       </div>
 
       <div class="d-flex flex-row">
         <div style="width: 60px;"><label for="name">名稱*：</label></div>
-        <input type="text" class="mb-3 mx-3" id="name" name="name" placeholder="輸入支出名稱" value="{{name}}" required="required">
+        <input type="text" class="mb-3 mx-3" id="name" name="name" placeholder="輸入支出名稱" value="{{expense.name}}"
+          required="required">
       </div>
 
       <div class="d-flex flex-row">
         <div style="width: 60px;"><label for="date">日期*：</label></div>
-        <input type="date" class="mb-3 mx-3" style="width: 183px; height: 30px;" id="date" name="date" required="required">
+        <input type="date" class="mb-3 mx-3" style="width: 183px; height: 30px;" id="date" name="date"
+          required="required">
       </div>
 
       <div class="d-flex flex-row">
@@ -32,9 +34,10 @@
 
       <div class="d-flex flex-row">
         <div style="width: 60px;"><label for="amount">金額*：</label></div>
-        <input type="number" class="mb-3 mx-3" id="amount" name="amount" placeholder="輸入金額" required="required">
+        <input type="number" class="mb-3 mx-3" id="amount" name="amount" placeholder="輸入金額" value="{{expense.amount}}"
+          required="required">
       </div>
 
-      <button class="btn btn-secondary">新增支出</button>
+      <button class="btn btn-secondary">確定修改</button>
     </form>
   </div>
