--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,14 +2,16 @@
   {{!-- 下拉選單與總金額 --}}
   <div class="d-flex flex-column" style="max-width: 28vw;">
     <div class="col">
-      <select name=”sort” style="width: 300px">
-        <option value=”sort-0”>類別</option>
-        <option value=”sort-1”>家居物業</option>
-        <option value=”sort-2”>交通出行</option>
-        <option value=”sort-3”>休閒娛樂</option>
-        <option value=”sort-4”>餐飲食品</option>
-        <option value=”sort-5”>其他</option>
-      </select>
+      <form action="/" method="post">
+        <select name=”sort” onchange="submit();" style="width: 300px">
+          <option value=”sort-0”>篩選類別</option>
+          <option value=”sort-1”>家居物業</option>
+          <option value=”sort-2”>交通出行</option>
+          <option value=”sort-3”>休閒娛樂</option>
+          <option value=”sort-4”>餐飲食品</option>
+          <option value=”sort-5”>其他</option>
+        </select>
+      </form>
     </div>
     <h5 class="mt-3">總金額：</h5>
     <div class="text-end">
@@ -21,29 +23,6 @@
 
 
 <div class="container d-flex flex-column mt-4" style="max-width: 28vw;">
-
-
-  <!-- 
-    <div class="d-flex flex-row justify-content-between">
-      {{!-- 詳細資訊 --}}
-      <div class="d-flex flex-row align-items-center" style="background-color: rgb(245, 231, 231);">
-        <i class="fa-solid fa-utensils"></i>
-        <div class="d-flex flex-column">
-          <span>午餐</span>
-          <span>2019/04/23</span>
-        </div>
-        <div>
-          <span style="margin-left: 60px;">60</span>
-        </div>
-      </div>
-      {{!-- 修改或刪除 --}}
-      <div class="d-flex flex-row">
-        <h5 class="mx-2">修改</h5>
-        <h5 class="mx-2">刪除</h5>
-      </div>
-    </div>
- -->
-
 
   <div class="d-flex flex-column" style="min-width: 28vw;">
     {{#each expenses}}
@@ -61,8 +40,8 @@
       </div>
       {{!-- 修改或刪除 --}}
       <div class="d-flex flex-row">
-        <h5 class="mx-2">修改</h5>
-        <h5 class="mx-2">刪除</h5>
+        <a href="/expense/{{this._id}}/edit" class="mx-2">修改</a>
+        <a href="/expense/{{this._id}}/delete" class="mx-2">刪除</a>
       </div>
     </div>
     {{/each}}
