--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,6 +11,8 @@
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   {{!-- fontawesome --}}
   <script src="https://kit.fontawesome.com/42fb96faae.js" crossorigin="anonymous"></script>
+  {{!-- CSS from static file --}}
+  <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
@@ -31,9 +33,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
-  {{!--
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.2.3/jquery.min.js"></script> --}}
-  {{!-- 上一行不知道為何曾經存在，導致快閃訊息無法關閉。 --}}
 </body>
 
 </html>
