feat: add flash message to the login page

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -22,9 +22,9 @@
         {{#if isAuthenticated}}{{user.email}}的{{/if}}家庭記帳本
       </a>
       {{#if isAuthenticated}}
-      <a href="/users/logout" class="btn btn-outline-primary">登出</a>
+      <a href="/users/logout" class="btn btn-outline-primary" id="navbar-btn">登出</a>
       {{else}}
-      <a href="/users/login" class="btn btn-outline-primary">登入</a>
+      <a href="/users/login" class="btn btn-outline-primary" id="navbar-btn">登入</a>
       {{/if}}
     </div>
   </nav>
@@ -33,6 +33,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
+  <!-- JavaScript from public folder-->
+  <script src="/javascripts/main.js"></script>
+
 </body>
 
 </html>
