--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,5 +6,39 @@
   width: 500px;
   height: 500px;
   font-size: 32px;
+  font-weight: bold;
   text-align: center;
+}
+
+.container-fluid {
+  font-weight: bold;
+}
+
+.div-a-data {
+
+  background-color: rgb(245, 231, 231);
+}
+
+.div-amount {
+  text-align: right;
+  width: 200px;
+  margin-right: 30px;
+}
+
+.crud-btn {
+  width: 100px;
+}
+
+#navbar-btn {
+  border-color: black;
+  color: orangered;
+  font-weight: bold;
+}
+
+#total {
+  color: rgb(255, 115, 0);
+}
+
+#btn-new {
+  max-width: 180px
 }
