--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -2,7 +2,7 @@
 
   <div class="d-flex flex-column">
 
-    <form action="/expense/new" method="post" class="d-flex flex-column mb-3">
+    <form action="/expenses/new" method="post" class="d-flex flex-column mb-3">
       <div class="d-flex flex-row align-items-center mb-3">
         <div style="width: 110px; font-size: 10px"><span>* 必填欄位</span></div>
         <div style="width: 150px;"><span>請修改你的支出</span></div>
