--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,7 +15,7 @@
     </div>
     <h5 class="mt-3">總金額：</h5>
     <div class="text-end">
-      <h1 style="color: rgb(255, 115, 0);">{{sum}}</h1>
+      <h1 id="total">{{sum}}</h1>
     </div>
   </div>
 </div>
@@ -28,20 +28,20 @@
     {{#each expenses}}
     <div class="d-flex flex-row justify-content-between">
       {{!-- 詳細資訊 --}}
-      <div class="d-flex flex-row align-items-center" style="background-color: rgb(245, 231, 231);">
+      <div class="d-flex flex-row align-items-center div-a-data">
         <i class="fa-solid fa-utensils"></i>
         <div class="d-flex flex-column">
           <span>{{this.name}}</span>
           <span>{{this.date}}</span>
         </div>
-        <div>
-          <span style="margin-left: 60px;">{{this.amount}}</span>
+        <div class="div-amount">
+          <span style="">{{this.amount}}</span>
         </div>
       </div>
       {{!-- 修改或刪除 --}}
-      <div class="d-flex flex-row">
-        <a href="/expense/{{this._id}}/edit" class="mx-2">修改</a>
-        <a href="/expense/{{this._id}}/delete" class="mx-2">刪除</a>
+      <div class="d-flex flex-row align-items-center">
+        <a href="/expenses/{{this._id}}/edit" class="mx-2 crud-btn">修改</a>
+        <a href="/expenses/{{this._id}}/delete" class="mx-2 crud-btn">刪除</a>
       </div>
     </div>
     {{/each}}
@@ -53,7 +53,7 @@
 
 {{!-- 新增支出鈕 --}}
 <div class="row mt-5 justify-content-center">
-  <a href="/expense/new" class="btn btn-primary" style="max-width: 180px;">新增支出</a>
+  <a href="/expenses/new" class="btn btn-primary" id="btn-new">新增支出</a>
 </div>
 
 
