--- a/views/partials/message.hbs
+++ b/views/partials/message.hbs
@@ -16,7 +16,14 @@
 
 {{#if warning_msg}}
 <div class="alert alert-warning alert-dismissible fade show" role="alert">
-  {{warning_msg}}
+   
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+{{/if}}
+
+{{#if error_msg}}
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+  {{error_msg}}
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 {{/if}}
