--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -17,12 +17,13 @@
       <div class="d-flex flex-row">
         <div style="width: 60px;"><label for="date">日期*：</label></div>
         <input type="date" class="mb-3 mx-3" style="width: 183px; height: 30px;" id="date" name="date"
-          required="required">
+          required="required" value="{{expense.date}}">
       </div>
 
       <div class="d-flex flex-row">
         <div style="width: 60px;"><label for="category">類別*：</label></div>
-        <select class="mb-3 mx-3" style="width: 183px; height: 30px;" id="category" name="category" required="required">
+        <select class="mb-3 mx-3" style="width: 183px; height: 30px;" id="category" name="category" required="required"
+          data-default="{{expense.category}}">
           {{!-- <option>請選擇類別</option> --}}
           <option>家居物業</option>
           <option>交通出行</option>
