--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,14 +33,14 @@
   margin-right: 30px;
 }
 
-.div-expense-a {
+.div-record-a {
   display: flex;
   flex-direction: row;
   align-items: center;
   margin-left: 50px;
 }
 
-.expense-a {
+.record-a {
   color: black;
   font-weight: bold;
   text-decoration: none;
@@ -65,13 +65,13 @@
   border: 0px;
 }
 
-.expense-name {
+.record-name {
   font-size: 20px;
   font-weight: bold;
 
 }
 
-.expense-icon {
+.record-icon {
   font-size: 32px;
   color: rgb(17, 189, 189);
   margin-right: 15px;
