--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -2,7 +2,7 @@
 
   <div class="d-flex flex-column">
 
-    <form action="/expenses/{{expense._id}}?_method=PUT" method="POST" class="d-flex flex-column mb-3">
+    <form action="/records/{{record._id}}?_method=PUT" method="POST" class="d-flex flex-column mb-3">
       <div class="d-flex flex-row align-items-center mb-3">
         <div style="width: 110px; font-size: 10px"><span>* 必填欄位</span></div>
         <div style="width: 150px;"><span>請修改你的支出</span></div>
@@ -10,32 +10,32 @@
 
       <div class="d-flex flex-row">
         <div style="width: 60px;"><label for="name">名稱*：</label></div>
-        <input type="text" class="mb-3 mx-3" id="name" name="name" placeholder="輸入支出名稱" value="{{expense.name}}"
+        <input type="text" class="mb-3 mx-3" id="name" name="name" placeholder="輸入支出名稱" value="{{record.name}}"
           required="required">
       </div>
 
       <div class="d-flex flex-row">
         <div style="width: 60px;"><label for="date">日期*：</label></div>
         <input type="date" class="mb-3 mx-3" style="width: 183px; height: 30px;" id="date" name="date"
-          required="required" value="{{expense.date}}">
+          required="required" value="{{record.date}}">
       </div>
 
       <div class="d-flex flex-row">
-        <div style="width: 60px;"><label for="category">類別*：</label></div>
-        <select class="mb-3 mx-3" style="width: 183px; height: 30px;" id="category" name="category" required="required"
-          data-default="{{expense.category}}">
+        <div style="width: 60px;"><label for="categoryId">類別*：</label></div>
+        <select class="mb-3 mx-3" style="width: 183px; height: 30px;" id="categoryId" name="categoryId"
+          required="required" data-default="{{record.categoryId}}">
           {{!-- <option>請選擇類別</option> --}}
-          <option>家居物業</option>
-          <option>交通出行</option>
-          <option>休閒娛樂</option>
-          <option>餐飲食品</option>
-          <option>其他</option>
+          <option value="1">家居物業</option>
+          <option value="2">交通出行</option>
+          <option value="3">休閒娛樂</option>
+          <option value="4">餐飲食品</option>
+          <option value="5">其他</option>
         </select>
       </div>
 
       <div class="d-flex flex-row">
         <div style="width: 60px;"><label for="amount">金額*：</label></div>
-        <input type="number" class="mb-3 mx-3" id="amount" name="amount" placeholder="輸入金額" value="{{expense.amount}}"
+        <input type="number" class="mb-3 mx-3" id="amount" name="amount" placeholder="輸入金額" value="{{record.amount}}"
           required="required">
       </div>
 
