--- a/views/new.hbs
+++ b/views/new.hbs
@@ -2,7 +2,7 @@
 
   <div class="d-flex flex-column">
 
-    <form action="/expenses/new" method="post" class="d-flex flex-column mb-3">
+    <form action="/records/new" method="post" class="d-flex flex-column mb-3">
       <div class="d-flex flex-row align-items-center mb-3">
         <div style="width: 110px; font-size: 10px"><span>* 必填欄位</span></div>
         <div style="width: 150px;"><span>請輸入你的支出</span></div>
@@ -10,25 +10,25 @@
 
       <div class="d-flex flex-row">
         <div style="width: 60px;"><label for="name">名稱*：</label></div>
-        <input type="text" class="mb-3 mx-3" id="name" name="name" placeholder="輸入支出名稱" value="{{name}}"
-          required="required">
+        <input type="text" class="mb-3 mx-3" id="name" name="name" placeholder="輸入支出名稱" required="required">
       </div>
 
       <div class="d-flex flex-row">
         <div style="width: 60px;"><label for="date">日期*：</label></div>
         <input type="date" class="mb-3 mx-3" style="width: 183px; height: 30px;" id="date" name="date"
-          required="required">
+          required="required" value="{{date}}">
       </div>
 
       <div class="d-flex flex-row">
-        <div style="width: 60px;"><label for="category">類別*：</label></div>
-        <select class="mb-3 mx-3" style="width: 183px; height: 30px;" id="category" name="category" required="required">
+        <div style="width: 60px;"><label for="categoryId">類別*：</label></div>
+        <select class="mb-3 mx-3" style="width: 183px; height: 30px;" id="categoryId" name="categoryId"
+          required="required">
           {{!-- <option>請選擇類別</option> --}}
-          <option>家居物業</option>
-          <option>交通出行</option>
-          <option>休閒娛樂</option>
-          <option>餐飲食品</option>
-          <option>其他</option>
+          <option value="1">家居物業</option>
+          <option value="2">交通出行</option>
+          <option value="3">休閒娛樂</option>
+          <option value="4">餐飲食品</option>
+          <option value="5">其他</option>
         </select>
       </div>
 
