--- a/views/register.hbs
+++ b/views/register.hbs
@@ -6,6 +6,8 @@
       <form action="/users/register" method="post" class="d-flex flex-column mb-3">
         <label for="email">輸入帳號（電郵位址）</label>
         <input type="email" class="mb-3" id="email" name="email" placeholder="輸入電郵位址" value="{{email}}">
+        <label for="name">使用者名稱</label>
+        <input type="name" class="mb-3" id="name" name="name" placeholder="輸入使用者名稱" value="{{name}}">
         <label for="password">輸入密碼</label>
         <input type="password" class="mb-3" id="password" name="password" placeholder="輸入密碼" value="{{password}}">
         <label for="confirm-password">確認密碼</label>
