--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -68,10 +68,10 @@
 .record-name {
   font-size: 20px;
   font-weight: bold;
-
+  min-width: 180px;
 }
 
-.record-icon {
+.fa-solid {
   font-size: 32px;
   color: rgb(17, 189, 189);
   margin-right: 15px;
