--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -22,9 +22,9 @@
         {{#if isAuthenticated}}{{user.name}}的{{/if}}家庭記帳本
       </a>
       {{#if isAuthenticated}}
-      <a href="/users/logout" class="btn btn-outline-primary" id="navbar-btn">登出</a>
+      <a href="/users/logout" class="btn btn-outline-dark" id="navbar-btn">登出</a>
       {{else}}
-      <a href="/users/login" class="btn btn-outline-primary" id="navbar-btn">登入</a>
+      <a href="/users/login" class="btn btn-outline-dark" id="navbar-btn">登入</a>
       {{/if}}
     </div>
   </nav>
