feat: set passport-google-oauth20 strategy

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -14,6 +14,7 @@
         <input type="password" class="mb-3" id="confirm-password" name="confirmPassword" placeholder="再次輸入密碼"
           value="{{confirmPassword}}">
         <button class="btn btn-primary">確認送出</button>
+        <a href="/auth/google" class="btn btn-secondary a-google">使用 Google 帳號登入</a>
       </form>
       <div class="row text-center">
         <span>已經擁有帳號？</span>
