--- a/views/login.hbs
+++ b/views/login.hbs
@@ -10,10 +10,12 @@
         <input type="password" class="mb-3" id="password" name="password" placeholder="輸入密碼">
 
         <button class="btn btn-primary">確認送出</button>
+        <a href="/auth/google" class="btn btn-secondary a-google">使用 Google 帳號登入</a>
       </form>
       <div class="row text-center">
         <span>沒註冊過帳號？</span>
         <a href="/users/register" class="card-link">註冊新帳號</a>
+
       </div>
     </div>
   </div>
