refactor: check and modify before submission

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -51,5 +51,5 @@
 
 {{!-- 新增支出鈕 --}}
 <div class="row mt-5 justify-content-center">
-  <a href="/records/new" class="btn btn-primary" id="btn-new">新增支出</a>
+  <a href="/records/new" class="mb-5 btn btn-primary" id="btn-new">新增支出</a>
 </div>
